src/test/resources/purescript_examples/failing/MultipleValueOpFixities.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith MultipleValueOpFixities\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('MultipleValueOpFixities')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('x')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('y')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Var)
              PSASTWrapperElement(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
          PSASTWrapperElement(IdentInfix)
            PSASTWrapperElement(Qualified)
              PsiElement(operator)('+')
              PsiElement(whitespace)(' ')
          PSASTWrapperElement(Value)
            PSASTWrapperElement(PrefixValue)
              PSASTWrapperElement(Var)
                PSASTWrapperElement(Qualified)
                  PsiElement(identifier)('y')
                  PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(FixityDeclaration)
        PSASTWrapperElement(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(FixityDeclaration)
        PSASTWrapperElement(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('add')
        PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n')
